# docs/swagger.json
@@ -140,6 +140,23 @@
                 }
             }
         },
+        "schemas.ProductResponse": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "Service": {
+                    "$ref": "#/definitions/schemas.ServiceResponse"
+                },
+                "ServiceID": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "schemas.ServiceResponse": {
             "type": "object",
             "properties": {
@@ -220,6 +237,12 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ProductResponse"
+                    }
                 },
                 "services": {
                     "type": "array",
